--- a/app/views/app.html
+++ b/app/views/app.html
@@ -5,29 +5,73 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../styles/bootstrap.min.css">
+  <link rel="stylesheet" href="../styles/style.css">
+  <script src="../scripts/jquery.min.js"></script>
+
+  <script>
+    var nw = require('nw.gui');
+    var win = nw.Window.get();
+    win.isMaximized = false;
+  </script>
 </head>
 <body>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Large modal</button>
-  <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        ...
+
+  <header>
+    <ul>
+      <li><div id='windowControlMinimize'></div></li>
+      <li><div id='windowControlMaximize'></div></li>
+      <li><div id='windowControlClose'   ></div></li>
+    </ul>
+  </header>
+
+  <div class="container">
+    <h2>Hello in Cram!</h2>
+    <form role="form">
+      <div class="form-group">
+        <label for="email">Login:</label>
+        <input type="email" class="form-control" id="email" placeholder="Enter login">
       </div>
-    </div>
+      <div class="form-group">
+        <label for="pwd">Password:</label>
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+      </div>
+      <div class="checkbox">
+        <label><input type="checkbox"> Remember me</label>
+      </div>
+      <button type="submit" class="btn btn-default">Register</button>
+      <button type="submit" class="btn btn-default">Submit</button>
+    </form>
   </div>
 
-  <!-- Small modal -->
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Small modal</button>
 
-  <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-sm">
-      <div class="modal-content">
-        ...
-      </div>
-    </div>
-  </div>
+  <script>
+    document.getElementById('windowControlMinimize').onclick = function()
+    {
+        win.minimize();
+    };
 
-  <script src="../scripts/jquery.min.js"></script>
+    document.getElementById('windowControlClose').onclick = function()
+    {
+        win.close();
+    };
+
+    document.getElementById('windowControlMaximize').onclick = function()
+    {
+        if (win.isMaximized)
+            win.unmaximize();
+        else
+            win.maximize();
+    };
+
+    win.on('maximize', function(){
+        win.isMaximized = true;
+    });
+
+    win.on('unmaximize', function(){
+        win.isMaximized = false;
+    });
+  </script>
+
   <script src="../scripts/bootstrap.min.js"></script>
 </body>
 </html>
