--- a/app/views/app.html
+++ b/app/views/app.html
@@ -39,10 +39,9 @@
         <label><input type="checkbox"> Remember me</label>
       </div>
       <button type="submit" class="btn btn-default">Register</button>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <button type="submit" class="btn btn-default" id='subm'>Submit</button>
     </form>
   </div>
-
 
   <script>
     document.getElementById('windowControlMinimize').onclick = function()
@@ -70,6 +69,42 @@
     win.on('unmaximize', function(){
         win.isMaximized = false;
     });
+
+    function getXmlHttp(){
+    	try {
+    		return new ActiveXObject("Msxml2.XMLHTTP");
+    	} catch (e) {
+    		try {
+    			return new ActiveXObject("Microsoft.XMLHTTP");
+    		} catch (ee) {
+    		}
+    	}
+    	if (typeof XMLHttpRequest!='undefined') {
+    		return new XMLHttpRequest();
+    	}
+    }
+
+    function getUrl(url, cb) {
+    	var xmlhttp = getXmlHttp();
+    	xmlhttp.open("GET", url+'?r='+Math.random());
+    	xmlhttp.onreadystatechange = function() {
+    		if (xmlhttp.readyState == 4) {
+    			cb(
+    			xmlhttp.status,
+    			xmlhttp.getAllResponseHeaders(),
+    			xmlhttp.responseText
+    			);
+    		}
+    	}
+    	xmlhttp.send(null);
+    }
+
+    document.getElementById('subm').onclick = function()
+    {
+      getUrl('http://javascript.ru/forum/url',function(status,headers,text){
+        alert(status);
+      });
+    };
   </script>
 
   <script src="../scripts/bootstrap.min.js"></script>
