--- a/app/views/start.html
+++ b/app/views/start.html
@@ -3,28 +3,14 @@
 <head>
   <title>Cram</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../styles/bootstrap.min.css">
   <link rel="stylesheet" href="../styles/style.css">
-  <script src="../scripts/jquery.min.js"></script>
-  <script src="../scripts/jquery.cookie.js"></script>
-  <script src="../scripts/bootstrap.min.js"></script>
-  <script src="../scripts/angular.min.js"></script>
-  <script src="../scripts/angular-route.min.js"></script>
-  <script src="../scripts/angular-resource.min.js"></script>
-  <script src="../scripts/firebase.js"></script>
-  <script>
-    var nw = require('nw.gui');
-    var win = nw.Window.get();
-    win.isMaximized = false;
-  </script>
+  <link rel="import" href="header.html">
 </head>
 <body>
 
   <header>
     <ul>
       <li><div id='windowControlMinimize'></div></li>
-      <!--<li><div id='windowControlMaximize'></div></li>-->
       <li><div id='windowControlClose'   ></div></li>
     </ul>
   </header>
@@ -69,16 +55,6 @@
       passwordField.val($.cookie("passw"))
     });
 
-    document.getElementById('windowControlMinimize').onclick = function()
-    {
-        win.minimize();
-    };
-
-    document.getElementById('windowControlClose').onclick = function()
-    {
-        win.close();
-    };
-
     function register() {
       errlog('');
       $('#reg').attr("disabled", "disabled");
@@ -109,6 +85,10 @@
                 $.cookie("email", email, { expires: 14 });
                 $.cookie("passw", passw, { expires: 14 });
               }
+
+              myRef.child("users").child(authData.uid).set({
+                name: authData.password.email.replace(/@.*/, '')
+              });
 
               $('#reg').removeAttr("disabled");
               $('#log').removeAttr("disabled");
@@ -151,11 +131,6 @@
     }
 
     function onLogin(){
-      myRef.child("users").child(authData.uid).set({
-        provider: authData.provider,
-        name: authData.password.email.replace(/@.*/, '')
-      });
-
       window.location.href = 'app.html';
       win.resizeTo(800,500);
       win.setPosition('center');
