--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -34,6 +34,7 @@ header{
   background-color: #666;
   -webkit-app-region: drag;
   -webkit-user-select: none;
+  box-shadow: 0px 2px 0px 0px #949494;
 }
 
 header>ul{
@@ -61,6 +62,8 @@ header>ul>li>div{
   -webkit-app-region: no-drag;
 }
 
+
+/*=============== start.html (login form) ==============*/
 .greating {
   font-family: 'Poiret One', cursive;
   margin: 0;
@@ -87,4 +90,27 @@ header>ul>li>div{
   font-size: 12pt;
   color: #d3422b;
   margin-top: 60px;
+}
+
+/*=============== app.html (main form) ==============*/
+.block {
+  position: absolute;
+}
+
+.chat {
+  width: 275px;
+  height: 403px;
+  top: 39px;
+  left: 17px;
+  background-color: #dfdfdf;
+}
+
+.ms-show {
+  box-shadow: 3px 3px 0px 0px #949494;
+  height: 100%;
+}
+
+input[type="text"].ms-field{
+  border-radius: 0;
+  box-shadow: 3px 3px 0px 0px #949494;
 }
